# EdgeChainDB

./: .gitignore  Dockerfile  README.md  docker-compose.yml  download  pyproject.toml
edgechaindb/: __init__.py  api.py  benchmark.py  canonical.py  cli.py  cluster_control.py  cluster_runtime.py  crypto.py  dashboard.py  device.py  device_node.py  gateway_server.py  ledger.py  merkle.py  models.py  observability.py  outbox.py  recovery_report.py  simulator.py  store.py  system_test.py
edgechaindb/benchmarks/: __init__.py  byzantine_quorum.py  common.py  event_size.py  finalization_latency.py  gateway_ingest.py  integrity_detection.py  offline_reconnect.py  signing_energy.py  storage_overhead.py
experiments/: full-matrix.yaml  large-scale-matrix.yaml  one-day-5-repetitions.yaml  one-day.yaml  preferred-10-repetitions.yaml  smoke.yaml
result/: artifact-manifest.sha256  pytest.txt  report.html  result.json
scripts/: diagnose_dashboard.ps1  diagnose_dashboard.sh  merge_experiments.ps1  merge_experiments.sh  plan_experiments.ps1  plan_experiments.sh  run_docker_tests.ps1  run_docker_tests.sh  run_experiment.ps1  run_experiment.sh  run_experiments.ps1  run_experiments.sh  start_all_experiments.ps1  start_all_experiments.sh
tests/: test_api.py  test_cluster_control.py  test_compose_workflow.py  test_device_node.py  test_distributed.py  test_experiment_compose_entrypoint.py  test_experiment_matrix.py  test_gateway_server.py  test_ledger.py  test_offline_device.py  test_recovery_report.py  test_research_benchmarks.py  test_verification_timeout.py
(+7 files in other folders)
